# Braincum

./: .gitignore  pyproject.toml
docs/: README.md  operations.md  specs.md
examples/: fib.bc
src/: __main__.py
src/braincum/: __init__.py  custom_types.py  errors.py  errors2.py  interpreter.py  traceback.py  utils.py
